@@ -1,1 +1,1 @@
-cpack -D CPACK_INSTALL_CMAKE_PROJECTS="${CMAKE_CURRENT_BINARY_DIR}/;Project;${UCA_CAMERA_NAME};/" -D CPACK_PACKAGE_FILE_NAME="uca-plugin-${UCA_CAMERA_NAME}-${UCA_VERSION_MAJOR}.${UCA_VERSION_MINOR}.${UCA_VERSION_PATCH}-${PLUGIN_VERSION}-${PLUGIN_REVISION}" ${PLUGIN_SPECIFIC_FLAGS}
+cpack -D CPACK_INSTALL_CMAKE_PROJECTS="${CMAKE_CURRENT_BINARY_DIR}/;Project;${UCA_CAMERA_NAME};/" -D CPACK_PACKAGE_FILE_NAME="uca-plugin-${UCA_CAMERA_NAME}-${UCA_VERSION_STRING}-${PLUGIN_VERSION}-${PLUGIN_REVISION}" -D CPACK_PACKAGE_NAME="uca-plugin-${UCA_CAMERA_NAME}" -D CPACK_RPM_PACKAGE_SUMMARY="${PLUGIN_SUMMARY}" -D CPACK_PACKAGE_VERSION="${PLUGIN_VERSION}" -D CPACK_RPM_PACKAGE_RELEASE="${PLUGIN_REVISION}" -D CPACK_RPM_CHANGELOG_FILE=${PLUGIN_CHANGELOG} -D CPACK_RPM_PACKAGE_REQUIRES="${PLUGIN_REQUIRES}" -D CPACK_RPM_PACKAGE_DESCRIPTION="${PLUGIN_DESCRIPTION}" -D CPACK_RPM_PACKAGE_VENDOR="${PLUGIN_VENDOR}"
