@@ -1,2 +1,4 @@
+* Thu Mar 14 2013 Mihael Koep <mihael.koep@softwareschneiderei.de> 1.0.0-3
+- improve package metadata and build scripts
 * Thu Mar 7 2013 Mihael Koep <mihael.koep@softwareschneiderei.de> 1.0.0-2
 - add changelog and improve package metadata
